# git-navigator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  install.sh
.github/workflows/: release.yml
docs/: TESTING_STRATEGY.md
src/: lib.rs  main.rs
src/commands/: add.rs  branches.rs  checkout.rs  diff.rs  mod.rs  reset.rs  rollback.rs  status.rs  update.rs
src/core/: args_parser.rs  colors.rs  command_init.rs  config.rs  dirs.rs  error.rs  git.rs  git_status.rs  index_parser.rs  mod.rs  output.rs  state.rs  templates.rs
test-repo/: README.md
tests/: branches_command_tests.rs  checkout_command_tests.rs  diff_command_tests.rs  status_command_tests.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs  repository.rs
